# fraud-detection

./: .env  .gitignore  README.md  Taskfile.yml  environment.yaml  pyproject.toml  requirements.txt
conf/: config.yaml  evaluation_params.yaml  feature_params.yaml  filter_params.yaml  model_params.yaml  params.yaml  path.yaml  random.yaml
src/: comparable_preprocessor.py  comparable_selector.py  main.py  read_param.py  select_comparable.py
src/config/: comparable_config.py
src/evaluation/: evaluation_utils.py
src/model/: model_pipeline.py  model_tuning.py
src/path/: PathProcessor.py
src/preprocess/: CompanyValidationUtils.py  RawPreprocessUtils.py  UtilsForShift.py  comparable_selector.py  raw_preprocess_utils.py  time_series_window_shifter.py  utils_for_shift.py
src/utils/: utils.py
