[tool.poetry]
name = "fraud-detection"
version = "0.1.0"
description = ""
authors = ["Haowei Lee <haoweilee.tpe@gmail.com>"]
readme = "README.md"
packages = [{include = "fraud_detection"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
hydra-core = "^1.3.2"
ipykernel = "^6.23.1"
pandas = "^2.0.2"
seaborn = "^0.12.2"
xlrd = "^2.0.1"


[tool.poetry.group.dev.dependencies]
chardet = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
